--- a/style.css
+++ b/style.css
@@ -1,27 +1,23 @@
-/* SETUP */
+/* GENERAL */
 * {
     box-sizing: border-box;
 }
 html {
     /* CONSTANTS */
-    --accent: black;
+    --accent: #007AFF;
     --secondary: #8A8A8E;
-    --navbar_height: 60px;
+    --navbar_height: 100px;
+    --nav_button_height: 60px;
+    --nav_buttons_count: 5;
     --content_width: 800px;
     --wide_content_width: 1200px;
     --animation_duration: 0.35s;
     
     scroll-behavior: smooth;
     text-align: center;
-
-    /* Stops weird font size resizing on mobile */
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-    text-size-adjust: 100%;
 }
 body, html {
-    background-color: var(--accent); /* Safari browser background */
+    background-color: black; /* Safari browser background */
 }
 p, h1, h2, h3, h4, a, button, body {
     margin: 0px;
@@ -31,11 +27,9 @@ p, h1, h2, h3, h4, a, button, body {
 /* FONTS */
 p {
     font-family: Raleway;
-    font-size: 1.05rem;
     line-height: 1.75rem;
 }
 h1, h2, h3, h4, a, button, .light {
-    text-transform: uppercase;
     font-family: Raleway;
 }
 .light {
@@ -46,7 +40,7 @@ h1, h2, h3, h4, a, button, .light {
 }
 
 /* IMAGES */
-.social_logo, .invert, .symbol {
+.invert {
     filter: invert(1); /* Convert black symbols to white */
 }
 .social_logo {
@@ -65,7 +59,7 @@ button, a {
     border: none;
     background: none;
     text-decoration: none;
-    color: white;
+    color: var(--accent);
 }
 @media (hover: hover) {
     button:hover, a:hover {
@@ -76,34 +70,32 @@ button, a {
     font-size: 1.2rem;
     padding: 10px 20px; /* Vertical Horizontal */
     border-radius: 100px; /* A large number to give capsule corners */
-    background-color: var(--accent);
     display: flex;
     gap: 15px;
     align-items: center;
     width: -moz-fit-content;
     width: fit-content;
+    background-color: black;
+    color: white;
 }
 
 /* BACKGROUND IMAGES */
-#contact, #shows, #intro {
-    background-color: rgba(0, 0, 0, 0.5); /* Darken background images slightly */
+#intro, #acting {
+    background-color: rgba(0, 0, 0, 0.6); /* Darken background images slightly */
     background-blend-mode: multiply;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
 }
-#contact {
-    background-image: url(images/banners/contact.jpeg);
-}
-#shows {
-    background-image: url(images/shows/revue_2017_step_into_the_bad_side.jpeg);
-}
 #intro {
-    background-image: url(images/shows/revue_2016_wild_wild_party.jpeg);
+    background-image: url(images/general/summer_ball1.jpg);
+}
+#acting {
+    background-image: url(images/general/summer_ball4.jpg);
 }
 #feature {
-    background-image: url("images/shows/revue_2023_where_i_want_to_be.jpeg");
+    background-image: url(images/shows/bald_prima_donna.jpg);
     background-position: center;
     background-repeat: repeat;
     background-size: contain;
@@ -111,48 +103,38 @@ button, a {
 }
 
 /* CONTENT */
-/* A padded piece of content */
 .section {
     display: flex;
     justify-content: center;
     align-items: center;
-    scroll-margin-top: var(--navbar_height); /* Ensures does not scroll behind navbar */
+    scroll-margin-top: var(--navbar_height);
     background-color: white;
+    padding: 100px 0px;
 }
-/* The content of a section */
 .section_content {
-    max-width: var(--content_width);
-    padding-top: 100px;
-    padding-bottom: 100px;
-    padding-left: calc(env(safe-area-inset-left) + 20px);
-    padding-right: calc(env(safe-area-inset-right) + 20px);
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 50px;
 }
-.wide_content {
+.regular_section {
+    max-width: var(--content_width);
+}
+.wide_section {
     max-width: var(--wide_content_width);
 }
-.short_section {
-    padding: 50px 20px;
-    width: 100%;
-}
-/* A grid of content */
 .content_grid {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 50px;
 }
-/* A row of content */
 .content_row {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 }
-/* A piece content eg. a show/committee member */
 .content_item {
     flex: 1;
     min-width: 300px;
@@ -163,75 +145,57 @@ button, a {
     gap: 20px;
 }
 
-/* FOOTER */
-#footer_text {
-    flex: 5;
-}
-.footer_logo {
-    flex: 1;
-}
-#footer_row {
-    width: 100%;
-    gap: 20px;
-}
-#imperial_logo {
-    height: 40px;
-}
-#union_logo {
-    height: 50px;
-}
-
 /* NAVIGATION */
 #nav {
-    background-color: var(--accent);
-    padding-left: env(safe-area-inset-left);
-    padding-right: env(safe-area-inset-right);
+    background-color: black;
     position: fixed;
     display: flex;
     justify-content: center;
     width: 100%;
     height: var(--navbar_height);
-    z-index: 1;
+    z-index: 2;
 }
-#nav_bar {
-    z-index: 1;
+#navbar {
+    z-index: 2;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     height: var(--navbar_height);
-    background-color: var(--accent);
+    background-color: black;
 }
 #nav_links {
     position: absolute;
-    background-color: var(--accent);
+    background-color: black;
+}
+#nav_logo {
+    height: 75px;
 }
 .nav_button {
+    color: white;
     padding: 0 20px;
-    height: var(--navbar_height);
-    line-height: var(--navbar_height);
+    height: var(--nav_button_height);
+    line-height: var(--nav_button_height);
 }
-/* Wide nav bar */
-@media (min-width: 900px) {
+@media (min-width: 800px) {
     #nav_links {
-        z-index: 1;
+        z-index: 2;
         flex-direction: row;
-        top: 0px;
+        top: calc((var(--navbar_height) - var(--nav_button_height))/2);
     }
     #nav_menu {
         display: none;
     }
 }
-/* Compact nav bar */
-@media (max-width: 900px) {
+@media (max-width: 800px) {
     #nav_links {
         z-index: 0;
         width: 100%;
         flex-direction: column;
-        top: calc(-4 * var(--navbar_height));
+        top: calc(var(--navbar_height) - var(--nav_buttons_count) * var(--nav_button_height));
     }
     #nav_links.selected {
-        top: 60px;
+        top: var(--navbar_height);
     }
     #nav_menu {
         display: block;
@@ -259,6 +223,7 @@ button, a {
     align-items: center;
 }
 #player {
+    z-index: 1;
     width: 100%;
     height: 100%;
     pointer-events: none;
@@ -275,11 +240,16 @@ button, a {
     background-color: rgba(0, 0, 0, 0.3);
     transition: opacity 1s;
 }
-#mtsoc_logo {
+#dramsoc {
     position: absolute;
-    transition: opacity 1s;
-    width: min(50vh, 50vw);
-    height: min(50vh, 50vw);
+}
+#dramsoc_logo {
+    width: min(30vh, 30vw);
+    height: min(30vh, 30vw);
+    margin-bottom: 20px;
+}
+#dramsoc_title {
+    font-size: 1.75rem;
 }
 #down_button {
     position: absolute;
@@ -335,6 +305,31 @@ button, a {
     width: 250px;
     height: 250px;
     border-radius: 50%;
+}
+
+/* FOOTER */
+#footer {
+    background-color: black;
+    color: white;
+}
+#footer_text {
+    flex: 5;
+}
+.footer_logo {
+    flex: 1;
+}
+#footer_row {
+    width: 100%;
+    gap: 20px;
+}
+#imperial_logo {
+    height: 40px;
+}
+#union_logo {
+    height: 50px;
+}
+#comus_logo {
+    height: 50px;
 }
 
 /* Dark Mode */
