--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ html {
     --secondary: #8A8A8E;
     --navbar_height: 100px;
     --nav_button_height: 60px;
-    --nav_buttons_count: 5;
-    --content_width: 800px;
-    --wide_content_width: 1200px;
+    --nav_buttons_count: 7;
+    --narrow_width: 800px;
+    --regular_width: 1200px;
     --animation_duration: 0.35s;
     
     scroll-behavior: smooth;
@@ -24,7 +24,7 @@ p, h1, h2, h3, h4, a, button, body {
     padding: 0px;
 }
 
-/* FONTS */
+/* TEXT */
 p {
     font-family: Raleway;
     line-height: 1.75rem;
@@ -41,7 +41,7 @@ h1, h2, h3, h4, a, button, .light {
 
 /* IMAGES */
 .invert {
-    filter: invert(1); /* Convert black symbols to white */
+    filter: invert(1);
 }
 .social_logo {
     width: 20px;
@@ -51,36 +51,12 @@ h1, h2, h3, h4, a, button, .light {
     width: 30px;
     height: 30px;
 }
-
-/* BUTTONS */
-button, a {
-    /* Remove default browser appearance */
-    font-size: 1rem;
-    border: none;
-    background: none;
-    text-decoration: none;
-    color: var(--accent);
-}
-@media (hover: hover) {
-    button:hover, a:hover {
-        opacity: 0.8; /* Slightly see-through on hover */
-    }
-}
-.large_button {
-    font-size: 1.2rem;
-    padding: 10px 20px; /* Vertical Horizontal */
-    border-radius: 100px; /* A large number to give capsule corners */
-    display: flex;
-    gap: 15px;
-    align-items: center;
-    width: -moz-fit-content;
-    width: fit-content;
-    background-color: black;
-    color: white;
+.logo {
+    height: 75px;
 }
 
 /* BACKGROUND IMAGES */
-#intro, #acting {
+#intro, #acting, #tech, #mailing_lists, #play_proposals {
     background-color: rgba(0, 0, 0, 0.6); /* Darken background images slightly */
     background-blend-mode: multiply;
     background-position: center;
@@ -94,12 +70,50 @@ button, a {
 #acting {
     background-image: url(images/general/summer_ball4.jpg);
 }
+#tech {
+    background-image: url(images/general/summer_ball2.jpg);
+}
+#mailing_lists {
+    background-image: url(images/general/summer_ball3.jpg);
+}
+#play_proposals {
+    background-image: url(images/general/acting1.jpg);
+}
 #feature {
     background-image: url(images/shows/bald_prima_donna.jpg);
     background-position: center;
     background-repeat: repeat;
     background-size: contain;
     height: calc(min(500px, 100vw));
+}
+
+/* BUTTONS */
+button, a {
+    /* Remove default browser appearance */
+    font-size: 1rem;
+    border: none;
+    background: none;
+    text-decoration: none;
+    color: var(--accent);
+}
+@media (hover: hover) {
+    button:hover, a:hover {
+        opacity: 0.75; /* Slightly see-through on hover */
+    }
+}
+.large_button {
+    font-size: 1.2rem;
+    padding: 10px 20px; /* Vertical Horizontal */
+    border-radius: 100px; /* A large number to give capsule corners */
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    background-color: black;
+    color: white;
+}
+.invert_button {
+    background-color: white;
+    color: black;
 }
 
 /* CONTENT */
@@ -109,7 +123,7 @@ button, a {
     align-items: center;
     scroll-margin-top: var(--navbar_height);
     background-color: white;
-    padding: 100px 0px;
+    padding: 100px 20px;
 }
 .section_content {
     display: flex;
@@ -117,11 +131,11 @@ button, a {
     align-items: center;
     gap: 50px;
 }
-.regular_section {
-    max-width: var(--content_width);
+.narrow_content {
+    max-width: var(--narrow_width);
 }
-.wide_section {
-    max-width: var(--wide_content_width);
+.regular_content {
+    max-width: var(--regular_width);
 }
 .content_grid {
     display: flex;
@@ -134,6 +148,7 @@ button, a {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    gap: 20px;
 }
 .content_item {
     flex: 1;
@@ -142,6 +157,12 @@ button, a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 20px;
+}
+.content_column {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
     gap: 20px;
 }
 
@@ -165,11 +186,12 @@ button, a {
     background-color: black;
 }
 #nav_links {
+    gap: 0px;
     position: absolute;
     background-color: black;
 }
-#nav_logo {
-    height: 75px;
+#nav_links.transition {
+    transition: all var(--animation_duration);
 }
 .nav_button {
     color: white;
@@ -177,7 +199,7 @@ button, a {
     height: var(--nav_button_height);
     line-height: var(--nav_button_height);
 }
-@media (min-width: 800px) {
+@media (min-width: 1000px) {
     #nav_links {
         z-index: 2;
         flex-direction: row;
@@ -187,7 +209,7 @@ button, a {
         display: none;
     }
 }
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
     #nav_links {
         z-index: 0;
         width: 100%;
@@ -200,15 +222,6 @@ button, a {
     #nav_menu {
         display: block;
     }
-    #footer_text {
-        flex-basis: 100%;
-    }
-    .footer_logo {
-        order: 1;
-    }
-}
-.transition {
-    transition: all var(--animation_duration);
 }
 
 /* PLAYER */
@@ -231,15 +244,6 @@ button, a {
     transition: opacity 1s;
     opacity: 0;
 }
-#player_cover {
-    position: absolute;
-    top: var(--navbar_height);
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.3);
-    transition: opacity 1s;
-}
 #dramsoc {
     position: absolute;
 }
@@ -253,9 +257,11 @@ button, a {
 }
 #down_button {
     position: absolute;
+    transition: opacity var(--animation_duration);
+    z-index: 1;
     bottom: 0px;
 }
-/* Hide down button when users can already see the rest of the page */
+/* Hide down button you can already see the rest of the page */
 @media (max-aspect-ratio: 16/10) {
     #down_button {
         opacity: 0;
@@ -268,13 +274,8 @@ button, a {
     height: calc(20px + 3vh);
 }
 
-/* ABOUT */
-#social_row {
-    gap: 20px;
-}
-
 /* SHOWS */
-#past_shows {
+#past_shows_grid {
     background-color: white;
     display: flex;
     flex-wrap: wrap;
@@ -311,16 +312,7 @@ button, a {
 #footer {
     background-color: black;
     color: white;
-}
-#footer_text {
-    flex: 5;
-}
-.footer_logo {
-    flex: 1;
-}
-#footer_row {
-    width: 100%;
-    gap: 20px;
+    padding: 50px 20px;
 }
 #imperial_logo {
     height: 40px;
@@ -330,6 +322,13 @@ button, a {
 }
 #comus_logo {
     height: 50px;
+}
+#address {
+    text-align: left;
+}
+.footer_link {
+    color: white;
+    text-decoration: underline;
 }
 
 /* Dark Mode */
@@ -343,10 +342,16 @@ button, a {
         background-color: #222222;
         box-shadow: none
     }
-    #past_shows {
+    #past_shows_grid {
         background-color: black;
     }
-    .invert_dark {
+    .large_button {
+        background-color: white;
+        color: black;
+    }
+}
+@media (prefers-color-scheme: light) {
+    .invert_light {
         filter: invert(1);
     }
 }
