--- a/style.css
+++ b/style.css
@@ -1,69 +1,48 @@
-/* GENERAL */
-* {
-    box-sizing: border-box;
+/* COLOURS */
+@media(prefers-color-scheme: light) {
+    :root {
+        --primary: black;
+        --background: white;
+        --secondary-background: #bbbbbb;
+        --accent: #007AFF;
+    }
 }
-html {
-    /* CONSTANTS */
-    --accent: #007AFF;
-    --secondary: #8A8A8E;
+@media(prefers-color-scheme: dark) {
+    :root {
+        --primary: white;
+        --background: black;
+        --secondary-background: #222222;
+        --accent: #0A84FF;
+    }
+}
+
+/* GENERAL */
+:root {
     --navbar_height: 100px;
     --nav_button_height: 60px;
-    --nav_buttons_count: 7;
+    --nav_buttons_count: 6;
     --narrow_width: 800px;
     --regular_width: 1200px;
     --animation_duration: 0.35s;
-    
+
+    background-color: black;
     scroll-behavior: smooth;
     text-align: center;
 }
-body, html {
-    background-color: black; /* Safari browser background */
-}
-p, h1, h2, h3, h4, a, button, body {
+* {
+    font-family: Raleway;
+    box-sizing: border-box;
     margin: 0px;
     padding: 0px;
 }
-
-/* TEXT */
-p {
-    font-family: Raleway;
+ul {
+    text-align: left;
+}
+p, li {
     line-height: 1.75rem;
-}
-h1, h2, h3, h4, a, button, .light {
-    font-family: Raleway;
-}
-.light {
-    font-weight: lighter;
-}
-.secondary {
-    color: var(--secondary);
-}
-
-/* IMAGES */
-.invert {
-    filter: invert(1);
-}
-.social_logo {
-    width: 20px;
-    height: 20px;
-}
-.symbol {
-    width: 30px;
-    height: 30px;
-}
-.logo {
-    height: 75px;
 }
 
 /* BACKGROUND IMAGES */
-#intro, #acting, #tech, #mailing_lists, #play_proposals {
-    background-color: rgba(0, 0, 0, 0.6); /* Darken background images slightly */
-    background-blend-mode: multiply;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-}
 #intro {
     background-image: url(images/general/summer_ball1.jpg);
 }
@@ -76,44 +55,8 @@ h1, h2, h3, h4, a, button, .light {
 #mailing_lists {
     background-image: url(images/general/summer_ball3.jpg);
 }
-#play_proposals {
-    background-image: url(images/general/acting1.jpg);
-}
-#feature {
-    background-image: url(images/shows/bald_prima_donna.jpg);
-    background-position: center;
-    background-repeat: repeat;
-    background-size: contain;
-    height: calc(min(500px, 100vw));
-}
-
-/* BUTTONS */
-button, a {
-    /* Remove default browser appearance */
-    font-size: 1rem;
-    border: none;
-    background: none;
-    text-decoration: none;
-    color: var(--accent);
-}
-@media (hover: hover) {
-    button:hover, a:hover {
-        opacity: 0.75; /* Slightly see-through on hover */
-    }
-}
-.large_button {
-    font-size: 1.2rem;
-    padding: 10px 20px; /* Vertical Horizontal */
-    border-radius: 100px; /* A large number to give capsule corners */
-    display: flex;
-    gap: 15px;
-    align-items: center;
-    background-color: black;
-    color: white;
-}
-.invert_button {
-    background-color: white;
-    color: black;
+#uch {
+    background-image: url(images/general/uch.jpg);
 }
 
 /* CONTENT */
@@ -124,6 +67,14 @@ button, a {
     scroll-margin-top: var(--navbar_height);
     background-color: white;
     padding: 100px 20px;
+}
+.background_section {
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: multiply;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
 }
 .section_content {
     display: flex;
@@ -166,32 +117,84 @@ button, a {
     gap: 20px;
 }
 
+/* IMAGES */
+.invert {
+    filter: invert(1);
+}
+.icon {
+    width: 20px;
+    height: 20px;
+}
+.small_logo {
+    height: 70px;
+}
+
+/* BUTTONS */
+button, a {
+    /* Remove default browser appearance */
+    font-size: 1rem;
+    border: none;
+    background: none;
+    text-decoration: none;
+    color: inherit;
+    transition: opacity var(--animation_duration);
+}
+@media(hover: hover) {
+    button:hover, a:hover {
+        opacity: 0.75; /* Slightly see-through on hover */
+    }
+}
+.large_button {
+    font-size: 1.2rem;
+    padding: 10px 20px;
+    border-radius: 100px;
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    background-color: var(--primary);
+    color: var(--background);
+}
+.background_section .large_button {
+    background-color: white;
+    color: black;
+}
+.large_button .icon {
+    filter: invert();
+}
+.background_section .large_button .icon {
+    filter: none;
+}
+
 /* NAVIGATION */
 #nav {
-    background-color: black;
     position: fixed;
-    display: flex;
-    justify-content: center;
     width: 100%;
     height: var(--navbar_height);
+    background-color: black;
     z-index: 2;
+    display: flex;
+    justify-content: center;
 }
 #navbar {
+    width: 100%;
+    height: var(--navbar_height);
+    background-color: black;
     z-index: 2;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    height: var(--navbar_height);
-    background-color: black;
 }
 #nav_links {
-    gap: 0px;
     position: absolute;
     background-color: black;
+    gap: 0px;
 }
 #nav_links.transition {
     transition: all var(--animation_duration);
+}
+#nav_menu_img {
+    width: 30px;
+    height: 30px;
 }
 .nav_button {
     color: white;
@@ -199,7 +202,7 @@ button, a {
     height: var(--nav_button_height);
     line-height: var(--nav_button_height);
 }
-@media (min-width: 1000px) {
+@media(min-width: 1000px) {
     #nav_links {
         z-index: 2;
         flex-direction: row;
@@ -209,7 +212,7 @@ button, a {
         display: none;
     }
 }
-@media (max-width: 1000px) {
+@media(max-width: 1000px) {
     #nav_links {
         z-index: 0;
         width: 100%;
@@ -228,21 +231,21 @@ button, a {
 #intro {
     position: relative;
     width: 100%;
-    aspect-ratio: 16/9;
     max-height: 100vh;
+    aspect-ratio: 16/9;
     padding-top: var(--navbar_height);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 #player {
-    z-index: 1;
     width: 100%;
     height: 100%;
-    pointer-events: none;
     display: block;
-    transition: opacity 1s;
+    z-index: 1;
     opacity: 0;
+    transition: opacity 1s;
+    pointer-events: none;
 }
 #dramsoc {
     position: absolute;
@@ -257,36 +260,35 @@ button, a {
 }
 #down_button {
     position: absolute;
+    bottom: 0px;
     transition: opacity var(--animation_duration);
     z-index: 1;
-    bottom: 0px;
 }
 /* Hide down button if you can already see the rest of the page */
-@media (max-aspect-ratio: 16/10) {
+@media(max-aspect-ratio: 16/10) {
     #down_button {
         opacity: 0;
     }
 }
 #down_button_img {
-    margin: 50px;
-    margin-bottom: 0;
     width: calc(20px + 3vh);
     height: calc(20px + 3vh);
+    margin: 50px;
+    margin-bottom: 0;
 }
 
 /* SHOWS */
-#past_shows_grid {
-    background-color: white;
+#past_shows {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
-    padding: 20px;
     justify-content: space-evenly;
     align-items: center;
+    gap: 20px;
+    padding: 20px 0px;
 }
 .show {
-    background-color: white;
-    box-shadow: 0px 5px 10px #bbbbbb;
+    background-color: var(--background);
+    box-shadow: 0px 5px 10px var(--secondary-background);
     max-width: 500px;
     flex: 1 1 400px;
     border-radius: 15px;
@@ -298,7 +300,7 @@ button, a {
     object-fit: cover;
 }
 .show_title {
-    margin: 15px 10px;
+    padding: 15px 10px;
 }
 
 /* COMMITTEE */
@@ -307,12 +309,22 @@ button, a {
     height: 250px;
     border-radius: 50%;
 }
+.committee_role {
+    font-size: 1.1rem;
+    text-transform: uppercase;
+}
+.committee_email {
+    color: var(--accent);
+}
 
 /* FOOTER */
 #footer {
     background-color: black;
     color: white;
     padding: 50px 20px;
+}
+#footer_grid {
+    align-items: start;
 }
 #imperial_logo {
     height: 40px;
@@ -325,33 +337,4 @@ button, a {
 }
 #address {
     text-align: left;
-}
-.footer_link {
-    color: white;
-    text-decoration: underline;
-}
-
-/* Dark Mode */
-@media (prefers-color-scheme: dark) {
-    .section {
-        color: white;
-        background-color: black;
-    }
-    .show {
-        color: white;
-        background-color: #222222;
-        box-shadow: none
-    }
-    #past_shows_grid {
-        background-color: black;
-    }
-    .large_button {
-        background-color: white;
-        color: black;
-    }
-}
-@media (prefers-color-scheme: light) {
-    .invert_light {
-        filter: invert(1);
-    }
 }
