Updated UCH photo

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ p, li {
     background-image: url(images/general/summer_ball3.jpg);
 }
 #uch {
-    background-image: url(images/general/uch.jpg);
+    background-image: url(images/general/uch2.jpeg);
 }
 
 /* CONTENT */
