Added redirects and policies

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ p, li {
     background-image: url(images/general/summer_ball1.jpg);
 }
 #acting {
-    background-image: url(images/general/summer_ball4.jpg);
+    background-image: url(images/general/acting1.jpg);
 }
 #tech {
     background-image: url(images/general/summer_ball2.jpg);
@@ -362,6 +362,7 @@ button, a {
     height: 50px;
 }
 #address {
+    line-height: 1.5rem;
     text-align: left;
 }
 #copyright {
