--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ ul {
     text-align: left;
     padding-left: 20px;
 }
-p, li {
+p, li, #address {
     line-height: 1.75rem;
 }
 .break {
@@ -362,7 +362,6 @@ button, a {
     height: 50px;
 }
 #address {
-    line-height: 1.5rem;
     text-align: left;
 }
 #copyright {
