Added committee and shows json files

--- a/style.css
+++ b/style.css
@@ -294,7 +294,7 @@ button, a {
 }
 
 /* SHOWS */
-#past_shows {
+#shows_grid {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
