Reduced image sizes

--- a/static/style.css
+++ b/static/style.css
@@ -63,7 +63,7 @@ p, li, #address {
     background-image: url(images/general/summer_ball2.jpg);
 }
 #mailing_lists {
-    background-image: url(images/general/summer_ball3.jpg);
+    background-image: url(images/general/summer_ball3.jpeg);
 }
 #uch {
     background-image: url(images/general/uch2.jpeg);
