--- a/static/style.css
+++ b/static/style.css
@@ -200,6 +200,9 @@ button, a {
     justify-content: space-between;
     align-items: center;
 }
+#navbar_padding {
+    height: var(--navbar_height);
+}
 #nav_links {
     position: absolute;
     background-color: black;
@@ -247,9 +250,8 @@ button, a {
 #intro {
     position: relative;
     width: 100%;
-    max-height: 100vh;
+    max-height: calc(100vh - var(--navbar_height));
     aspect-ratio: 16/9;
-    padding-top: var(--navbar_height);
     display: flex;
     justify-content: center;
     align-items: center;
