renamed #mailing_lists to #talk

--- a/static/style.css
+++ b/static/style.css
@@ -62,7 +62,7 @@ p, li, #address {
 #tech {
     background-image: url(images/general/summer_ball2.jpg);
 }
-#mailing_lists {
+#talk {
     background-image: url(images/general/summer_ball3.jpeg);
 }
 #uch {
