--- a/static/style.css
+++ b/static/style.css
@@ -301,7 +301,7 @@ button, a {
 
 /* FEATURE */
 #feature {
-    background-image: url("images/posters/insinuation.jpeg");
+    background-image: url("images/posters/tycho.jpeg");
     background-position: center;
     background-repeat: repeat;
     background-size: contain;
