--- a/static/style.css
+++ b/static/style.css
@@ -351,6 +351,26 @@ button, a {
     width: 250px;
     height: 250px;
     border-radius: 50%;
+    overflow: hidden;
+    background-color: var(--darker);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.headshot .headshot-image {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-size: cover;
+    background-position: center;
+}
+.headshot svg {
+    fill: var(--lighter);
+    width: 75%;
+    height: 75%;
 }
 .committee_role {
     color: var(--secondary);
